tests/fixtures/invalid/pow_str_float_int.py
# Cannot call pow() with Str, Float, Int
x = pow("hello", 1.0, 1)
